--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="what">Co</string>
     <string name="notes">Notatki</string>
     <string name="save">Zapisz</string>
+    <string name="shrink">Zwiń</string>
+    <string name="expand">Rozwiń</string>
 </resources>
